--- a/tricity-royals-client/package.json
+++ b/tricity-royals-client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.7.4",
+    "keen-slider": "^6.8.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "wouter": "^3.7.0"
