--- a/tricity-royals-client/package.json
+++ b/tricity-royals-client/package.json
@@ -14,6 +14,7 @@
     "keen-slider": "^6.8.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "wouter": "^3.7.0"
   },
   "devDependencies": {
