--- a/tricity-royals-server/.env
+++ b/tricity-royals-server/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://neondb_owner:npg_iSCvRHs0Q7Bw@ep-wispy-frog-a4xjn3ys-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
-#DATABASE_URL=postgres://your-user:your-password@ep-curly-breeze-123456.us-east-2.aws.neon.tech/neondb
+PORT=3000
+CLIENT_URL=https://tricityroyalsclub.vercel.app
