--- a/tricity-royals-server/package.json
+++ b/tricity-royals-server/package.json
@@ -1,9 +1,11 @@
 {
   "name": "tricity-royals-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
