--- a/tricity-royals-client/package.json
+++ b/tricity-royals-client/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.5.2",
     "wouter": "^3.7.0"
   },
   "devDependencies": {
